src/objects/Apttus_Config2__TransferPrice__c.object
<CustomObject>
    <description>Represents association of source price like factory price with source cost like FES source cost</description>
    <fields>
        <fullName>Apttus_Config2__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this mapping is primary</description>
        <inlineHelpText>Specifies whether this mapping is primary</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceChargeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Charge Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceField__c</fullName>
        <description>Field name in Line Item object from where price is copied.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Field</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetCostModelId__c</fullName>
        <description>Reference to master cost model for which the transfer price is defined</description>
        <label>Target Cost Model</label>
        <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
        <relationshipLabel>Transfer Prices</relationshipLabel>
        <relationshipName>TransferPrices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetCostType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Cost Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Transfer Price</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Transfer Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>